# TE_Test_Equipment_Inventory

./: .gitignore  AGENTS.md  README.md  eslint.config.js  package.json  tsconfig.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs  main.rs
backend/src/api/: commands.rs  mod.rs  mutations.rs
backend/src/domain/: entry_changes.rs  mod.rs  model.rs  query.rs
backend/src/integrations/: deprecated_db_cleanup.rs  mod.rs  native.rs
backend/src/integrations/export/: mod.rs  workbook.rs
backend/src/integrations/export/workbook/: columns.rs  formats.rs
backend/src/integrations/inventory_import/: commit.rs  mapping.rs  mod.rs  parser.rs  reconcile.rs
backend/src/runtime/: mod.rs  shared_sync.rs  shared_watcher.rs
backend/src/storage/: codec.rs  entries.rs  imports.rs  keys.rs  metadata.rs  mod.rs  sync_state.rs  tests.rs
backend/src/sync/: apply.rs  auth.rs  conflicts.rs  identity.rs  mod.rs  queue.rs  recovery.rs  scanning.rs  shared_paths.rs  timestamps.rs  types.rs
backend/src/sync/operation_file/: canonical.rs  mod.rs  paths.rs  validation.rs
backend/src/sync/snapshot/: apply.rs  io.rs  lock.rs  mod.rs  publish.rs  types.rs
backend/tests/: import_flow.rs  live_db_audit.rs  performance_baseline.rs  shared_sync_flow.rs  sync_conflict_flow.rs  sync_core.rs
backend/tests/support/: backend.rs  core_backend.rs  sync_fixtures.rs
backend/windows/: nsis-hooks.nsh
docs/: README.md  SESSION_HANDOFF.md  SESSION_START_PROMPT.md
frontend/: index.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts  (+1 more)
(+110 files in other folders)
